<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetalleCita"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/toolbar_detalle_cita">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nueva_cita"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/login_colorT"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/login_colorBg"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/atras"
            />
    </androidx.appcompat.widget.Toolbar>
    <!--Dog's name-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_la_mascota"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@android:color/black"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLength="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/petsNameInput"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Breed-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/raza"
        android:layout_marginHorizontal="16dp"
        android:textColorHint="@android:color/black"
        android:layout_marginTop="32dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/breedAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:inputType="text"
            android:background="@null"
            android:padding="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Owner's name-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_del_propietario"
        android:textColorHint="@android:color/black"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ownerNameInput"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--Phone number-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:textColorHint="@android:color/black"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInput"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--Sympthoms Dropdown-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="dropdown_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/symptoms_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:inputType="none"
            android:background="@null"
            android:padding="12dp"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--Confirm button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guardarCitaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:backgroundTint="@null"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_diskette"
        android:drawableTint="@color/button_color"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingTop="7dp"
        android:paddingRight="30dp"
        android:paddingBottom="7dp"
        android:text="@string/guardar_cita"
        android:textColor="@color/button_color"
        android:textSize="16sp"
        android:enabled="false"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="190dp" />
</LinearLayout>